manifests/routes/app001-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app001-route
spec:
  parentRefs:
  - name: my-gateway
    namespace: default
  hostnames:
  - "app001.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: app001
      port: 80
