manifests/routes/rancher-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-route
  namespace: cattle-system
spec:
  parentRefs:
  - name: my-gateway
    namespace: default
    sectionName: https
  hostnames:
  - rancher.localhost
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: waf-rancher
      namespace: default
      port: 80
